# epycell

./: .gitignore  Cargo.toml  README.md  default_config.toml  demo.ipynb  main.py  pyproject.toml  sample.ipynb
.github/workflows/: release.yml
examples/: sixel_test.rs
src/: config.rs  kernel.rs  lsp.rs  main.rs  nb.rs
themes/: aidsDick.tmTheme  catppuccin-mocha.tmTheme  dracula.tmTheme  gruvbox-dark.tmTheme  nord.tmTheme  onedark.tmTheme  tokyonight.tmTheme
